--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         <activity android:name=".SquareActivity" />
         <activity android:name=".ScriptInformationActivity" />
         <activity android:name=".AskScriptActivity" />
+        <activity android:name=".DownloadActivity"/>
+        <activity android:name=".NoticeActivity"/>
 
         <service
             android:name=".fcm.MyFirebaseMessagingService"
@@ -58,6 +60,7 @@
         </service>
 
         <activity android:name=".TutorialActivity"></activity>
+        <activity android:name=".FreeActivity" />
     </application>
 
 </manifest>
