--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobile.vople.vople"
-    android:versionName="1.1"
-    android:versionCode="2">
+    android:versionName="1.2"
+    android:versionCode="3">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".main.MainActivity" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -34,7 +34,7 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".VopleAdminEventActivity" />
         <activity android:name=".ListOrCreateActivity" />
-        <activity android:name=".EventActivity" />
+        <activity android:name=".SituationActivity" />
         <activity android:name=".FollowingActivity" />
         <activity android:name=".SquareActivity" />
         <activity android:name=".ScriptInformationActivity" />
@@ -42,22 +42,22 @@
         <activity android:name=".DownloadActivity"/>
         <activity android:name=".NoticeActivity"/>
 
-        <service
-            android:name=".fcm.MyFirebaseMessagingService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".fcm.MyFirebaseInstanceIDService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-            </intent-filter>
-        </service>
+        <!--<service-->
+            <!--android:name=".fcm.MyFirebaseMessagingService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+            <!--</intent-filter>-->
+        <!--</service>-->
+        <!--<service-->
+            <!--android:name=".fcm.MyFirebaseInstanceIDService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.firebase.INSTANCE_ID_EVENT" />-->
+            <!--</intent-filter>-->
+        <!--</service>-->
 
         <activity android:name=".TutorialActivity"></activity>
         <activity android:name=".FreeActivity" />
